--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "bol"
   ],
   "homepage": "http://github.com/harm-smits/bol-com-retailer-api",
-  "license": "MIT",
+  "license": "Custom",
   "authors": [
     {
       "name": "Harm Smits",
